src/native/abi/abi.h

#pragma once

#include <cstdint>

#include "..\pos.h"
#include "..\logic\spray.h"

#define SL_API extern "C" __declspec(dllexport)

struct SlSpray {
	const char* name;
	int weapon;
	uint64_t dur;
	int64_t epoch;
	const Bullet* bullets;
	int bulletC;
	const Delta* deltas;
	int deltaC;
};

typedef void(__cdecl* SprayCallback)(const SlSpray* sp);

SL_API int slPing(void);
SL_API void slSetSprayCallback(SprayCallback cb);
SL_API int slInit(void);
SL_API int slRegisterCapture(void);
SL_API int slSetWeapon(int weapon);
SL_API void slSetConversion(float sens, float mYaw);
SL_API void slSetCaptureMode(int reqRmb);
SL_API int slDeleteSpray(const char* name);
SL_API int slRenameSpray(const char* oldName, const char* newName, char* outFinal, int cap);
SL_API int slImportSpray(const wchar_t* path);
SL_API int slPeriodAvg(int weapon, int n, Bullet* out, int cap);

void abiCaptureDone(Spray& sp);